--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/dbarrios13/webauth-i-challenge#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^1.4.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "helmet": "^3.18.0",
     "knex": "^0.17.6",
     "sqlite3": "^4.0.9"
